Fixed grid overlapping for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,17 +141,7 @@ h3 {
 
 .self-image img {
     max-width: 80%;
-    /* padding: 100px 0; */
 }
-/* 
-.skills-container {
-    display: grid;
-    align-items: center;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    min-height: calc(100vh - 10vh);
-} */
-
 
 .skills-container {
   display: grid;
@@ -165,7 +155,6 @@ h3 {
 .skill-box {
   text-align: center;
   padding: 8vh 2rem 1.5rem 2rem;
-  /* padding: 1.5rem 2rem; */
   border: 1px solid var(--highlight);
   background: var(--light);
 }
@@ -235,7 +224,6 @@ form {
     display: grid;
     grid-gap: 16px;
     grid-template-columns: 2fr 1fr;
-    /* padding: 20px; */
 }
 
 form label {
@@ -245,7 +233,6 @@ form label {
 form p,
 form h4 {
     margin: 0 5vw;
-    /* padding: 0 1em; */
 }
 
 .full-width {
@@ -287,7 +274,6 @@ textarea {
     grid-template-columns: 1fr 1fr;
     margin: 0 5vw;
     margin-bottom: 10px;
-    /* align-items: center; */
 }
 
 #radio-label {
@@ -297,14 +283,6 @@ textarea {
 .radio-container h4 {
     margin-left: 0;
 }
-/* .radio-container label {
-    column: 2;
-}*/
-
-/* .radio-container input {
-    position: absolute;
-    left: 0;
-} */
 
 #form-button {
     margin: 0;
@@ -329,17 +307,6 @@ button:hover, button:focus {
 }
 
 @media (max-width: 800px) {
-    /* .top-nav {
-        justify-content: space-around;
-    } */
-
-    /* .top-nav {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-} */
-
     .top-nav {
         flex-flow: column wrap;
         padding: 0;
@@ -351,20 +318,11 @@ button:hover, button:focus {
         background: transparent;
         color: var(--contrast);
         margin: 2px;
-        /* margin-left: 10px; */
-        /* padding: 20px; */
     }
-
-    /* .top-nav a {
-        text-align: center;
-        padding: 10px;
-    } */
 
     .toggle {
         display: block;
         flex: 1;
-        /* text-align: right; */
-        /* order: 1; */
     }
 
     .btn.menu-item {
@@ -413,7 +371,6 @@ button:hover, button:focus {
     }
 
     .skills-container {
-        /* max-height: 100vh; */
         padding: 70px 20px 0 20px;
         margin: 0;
         grid-template-columns: repeat(2, 1fr);
@@ -433,7 +390,6 @@ button:hover, button:focus {
     }
 
     .projects-container {
-        /* max-height: 100vh; */
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 20px;
         margin: 0;
@@ -450,14 +406,11 @@ button:hover, button:focus {
 
     .contact-container {
         padding-top: 35vh;
-        /* max-height: 100vh; */
     }
 
     .form-container {
         margin: 0 5vw;
-        /* margin-top: 5vh; */
-        /* padding-top: 100px; */
-}
+    }
 
 }
 
